--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1058,7 +1058,7 @@
 	    color: #000;
 	}
 
-	.site-extra-text .header-contact h5 {
+	.site-extra-text .header-contact p {
 	    margin-top: 0;
 	    margin-bottom: 0;
 	    font-weight: 500;
@@ -5948,6 +5948,20 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
+	}
+    .woocommerce ul.products li.product h3 {
+	    margin-top: 0;
+	    margin-bottom: 5px;
+        font-size: 18px;
+	}
+
+	.woocommerce ul.products li.product h3 a {
+	    color: #393939;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        font-size: 16px;
 	}
 
 	.woocommerce ul.products li.product .price {
@@ -11014,7 +11028,6 @@
         height: 100%;
         object-fit: cover;
     }
-
 
     .callBack__phone,
     .callBack__whatsApp,
